added elasticsearch,  backup commit.
basic search is working but has to be integrated into the recipe_list view.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ stomach_src/migrations/__pycache__/
 virtual_env/
 
 *.pyc
+*.cfs
+*.si
+*.lock
+external/elasticsearch-1.7.5/data/
+external/elasticsearch-1.7.5/logs/
